--- a/article/sg0/doc/0011.md
+++ b/article/sg0/doc/0011.md
@@ -142,7 +142,7 @@
 真由理开始扭扭捏捏起来。  
 由季：“嗯？”  
 真由理：“比如桶子君，你觉得怎么样？”  
-由季：“诶？桥田君？”  
+由季：“诶？桥田桑？”  
 真由理：“嗯”  
 吹雪：“等等！你到底在说什么啊，真由喜！那个桥田可是 HENTAI 绅士哟！”  
 枫：“由季可是会遭毒手的……”  
@@ -151,7 +151,7 @@
 ![](../static/image/0011-5.png)
 
 ——就是这样的危险人物。然而，被问及的由季本人，不仅仅很困扰的态度，甚至还表现出有些寂寞的感觉。  
-“嗯……桥田君虽然是个好人，但怎么说呢……  
+“嗯……桥田桑虽然是个好人，但怎么说呢……  
  像我这样的女孩子，他可能并不太喜欢吧。”  
 “诶诶？！”  
 真由理不是一般的惊讶。过于惊讶，以至于她手中的行李箱掉到了地上，而她对此毫不在意，拼命地向由季说着：  
@@ -163,7 +163,7 @@
 “不，只要看看就知道了。总是感觉不止为何在被避开。  
  所以圣诞派对，我也考虑我是不是不去会比较好。”  
 真由理：“啊……呜……”    
-“桥田君，可能更喜欢……妹系？是不是更喜欢这类的女孩子呢？  
+“桥田桑，可能更喜欢……妹系？是不是更喜欢这类的女孩子呢？  
  而且是，相当强硬的，会管着哥哥的妹妹。”  
 “啊呜呜呜呜……”  
 “就比如说……像是铃羽小姐那种的感觉？”  
