--- a/article/sg0/doc/0012.md
+++ b/article/sg0/doc/0012.md
@@ -134,7 +134,7 @@
 “嘛，有约的话应该过一会儿就来了吧。”  
 “我可以在这里等吗？”  
 “那是当然的。准备在这里做料理的吗？”  
-“是的，桥田君也请务必尝尝味道。”  
+“是的，桥田桑也请务必尝尝味道。”  
 “真由喜的……并不怎么想吃哦……”  
 “没问题的哟\~真由理酱已经很拿手了。”  
 “嘿……嘿嘿……”  
@@ -148,13 +148,13 @@
 “嗯！很好！非常好！”  
 “真的吗？”  
 “唔哈，天使 ktkr！这样的感觉。”  
-“谢谢。桥田君也打扮一下吧？稍微瘦一点的话，我想就相当棒的哦！”  
+“谢谢。桥田桑也打扮一下吧？稍微瘦一点的话，我想就相当棒的哦！”  
 “唔哈哈……”  
 “我是说真的哟\~”  
 “哦……哦！”  
 桥田至和阿万音由季，两人颇有些生硬地对话着。  
 
-“桥田君，吸尘器在哪？”  
+“桥田桑，吸尘器在哪？”  
 由季四处寻找着吸尘器，逐渐靠近铃羽藏身的开发室。  
 “呃……就在那个幕帘后面——啊！危险！”  
 “这后面？”  
@@ -162,7 +162,7 @@
 差点暴露而突然反应过来的桶子阻止了由季，连忙进入了开发室内。在拿地板上的吸尘器的时候，跟躲在桌子下的铃羽视线相交。  
 “（悄声）别暴露了啊，爸爸。”  
 “（悄声）*Okey-dokey!*”  
-“桥田君，吸尘器在里面吗？”  
+“桥田桑，吸尘器在里面吗？”  
 “啊……嗯，嗯！”  
 看起来由季应该是没有发现的样子，在房间里开始了打扫。确实在早上的时候，房间里就已经比较乱了，以由季的性格这时候忍不住要打扫对于铃羽来说是很容易猜到的。  
 桶子把地板上放着的那个像是吸尘器一样的东西拿到以后走出了开发室。  
@@ -171,7 +171,7 @@
  分解开的话，应该是可以当作普通吸尘器来用的。”  
 “明明是为了打扫用的吸尘器，要是还需要分解开的话，不会反而让房间变得更乱吗？”  
 “啊呜……”  
-“哈哈哈，桥田君虽然头脑那么聪明，有时候也会这么笨笨的呢！”  
+“哈哈哈，桥田桑虽然头脑那么聪明，有时候也会这么笨笨的呢！”  
 “是，是嘛……”  
 “但是，我更喜欢这样的人啊。”  
 “神……神马？”  
