--- a/article/sg0/doc/0095.md
+++ b/article/sg0/doc/0095.md
@@ -31,9 +31,9 @@
  从那时开始我就站在这里，为了到底该不该发送而烦恼。  
  然后没想到，你居然会**来这里**呢。”  
 “你……为什么……”  
-“呐，冈部。你，刚才，是**从其他的世界线过来的**对吧？”  
+“呐，冈部，你……**是从其他世界线过来的**，对吧？”  
 “——！”  
-“而且是**从 β 世界线**……不是吗？”  
+“而且**是从 β 世界线**……不是吗？”  
 “……你注意到了吗？”  
 “如果不是这样，你应该也不会做出那种事情。”  
 “那种事情？”  
@@ -42,82 +42,78 @@
 ![](../static/image/0095-2.png)
 
 她的每一点都很惹人怜爱。像现在这样，为了隐藏自己的害羞而涨红了脸，不敢直视的样子也是；强硬撅起的嘴唇也是；玩弄着发梢的动作也是。处处都惹人怜爱。事到如今，我再次确认了我的心意。我，确实喜欢着牧濑红莉栖。  
-“更准确地说，这次世界线变动**是由某个未知的人引起的**，  
- **并不是因为你的意愿而产生的**。我说中了吗？”  
-“这一切……都被你看穿了啊……”  
-“我只是一直注视着你这样一路走来而已。”  
+“更准确地说，这次世界线变动，**是由某个未知的人引发的，而非你的意愿**。我说中了吗？”  
+“一切……都被你看穿了啊……”  
+“我只是一直注视着你，看你这样一路走来而已。”  
 “诶？”  
-“啊，不、不是的。说是注视着你一路走来……也不是这个意思……不，也不能说没有……”  
+“啊，不、不是的，说注视着你什么的……也不是这个意思……不，也不能说没有……”  
 “……”  
 “总、总之！”  
 深呼吸之后，原本躲开了视线的红莉栖，直直地看向了我。  
 “既然你是从 β 世界线来的，也就是说**你曾经选择了那个世界**对吧？”  
-我真的赢不过她。如此短的时间里，就能理解到这种程度。全部都如红莉栖所言。即使如此，我也无法点头。承认这点就意味着，承认我曾经对红莉栖——对她见死不救。那种事情，如今的我不可能做到。  
+我真的赢不过她。这么短的时间里，就能理解到这种程度……全部都如红莉栖所言。即使如此，我也无法承认，因为承认这一点就意味着，承认我曾经对她见死不救。那种事情，如今的我不可能做到。  
 “……对不起。”  
-最后说出口的，仅仅是这样的话语。这样和直接承认了也没什么两样。但是，红莉栖露出的表情却没有一点悲伤……不仅如此——  
-“不要道歉，笨蛋。这是你自己做的决定不是吗？所以，对自己的选择要有自信。”  
-她甚至在如此鼓励我。没错，正如红莉栖所言，选择了那个世界——β 世界线的是我自己。但是——  
+最后说出口的，仅仅是这样的话语，和直接承认了也没什么区别。但是，红莉栖的表情却没有一点悲伤……不仅如此——  
+“不要道歉，笨蛋！这是你自己做的决定不是吗？所以，对自己的选择要有自信。”  
+她甚至鼓励了我。没错，正如红莉栖所言，选择了那个 β 世界线的是我自己。但是——  
 “而且呢，你也许并没有错……  
- 虽然你刚刚来还不知道，这半年来，你一直在责备自己……  
- 虽然那种姿态，绝对不会让我看到就是了。”  
-一样的。和至今为止的我一样。和 β 世界线的我一样。  
-“但是，我什么都没能做到。  
- 因为，你的痛苦都是源于我……  
- 为了让我活着，你才会那么痛苦。  
- 不过，到今天就结束了。必须让它结束。  
- 因为，再这样下去，你会一直被自己有罪的想法折磨，最后一定会崩溃的。”  
+ 你刚来还不知道，这半年来，你一直在责备自己……  
+ 虽然那种姿态，你绝对不会让我看到就是了。”  
+一样的，和至今为止的我一样，和 β 世界线的我一样。  
+“但是，我什么都做不到。因为，你的痛苦的根源就是我……为了让我活着，你才会那么痛苦。  
+ 不过，到今天就结束——必须让它结束。  
+ 再这样下去，你会一直被自己有罪的想法折磨，最后一定会崩溃的。”  
 “……一样的。”  
 “……什么意思？”
-“不管在哪边，最后我都是一直在后悔。  
- 后悔救不了真由理，后悔救不了你。  
- 不管是在 α 世界线，还是在 β 世界线，都没有改变。”  
+“不管在哪边，最后我都是一直在后悔。后悔救不了真由理，后悔救不了你。  
+ 不管在 α 世界线，还是在 β 世界线，都没有改变。”  
 既然如此，那就——干脆就这样——  
 “振作点，冈部伦太郎！”  
 “红莉栖……”  
 “这是什么表情啊，一点都不像你。我喜欢的凤凰院凶真，脸上要更加充满自信的。”  
-凤凰院凶真……吗？十分令人怀念的名字。  
-“你选择了正确的道路。拯救真由理这个选择是绝对没错的！”  
+凤凰院凶真……吗？真是令人怀念的名字。  
+“你选择了正确的道路，拯救真由理这个选择是绝对没错的！”  
 “但是，我把你……”  
-“听好了，现在，你在这里的这件事……对，只是在做梦而已哦\~”  
+“听好了，现在，你在这里的这件事……对，只是在做梦而已！”  
 “梦……？”  
-“对，在梦里，你见到了我。只是这样而已。怎么样？这样想的话，稍微轻松一点了吧？”  
-红莉栖耸了耸肩，笑了。  
+“对，在梦里，你见到了我，这只是梦而已。怎么样？这样想会稍微轻松一点吧？”  
+红莉栖耸耸肩，笑得很温柔。  
 “虽然脑科学的研究已经有了这么大的进展，但是人做梦的机理还没有解明呢。  
  虽然有一种说法，人在睡觉的时候，大脑会进行记忆的整理，在这个过程中产生了梦。  
  简言之，这里是 β 世界线的你闯入的梦中世界，是为了让你整理脑中的记忆哦\~  
  既然是梦的话，总是要醒过来的，对吗？”  
 “但是，这不是梦！现在这样——”  
-我伸出手，触碰着红莉栖的脸颊。  
+我伸出手，触碰红莉栖的脸颊。  
 “现在这样，你就在这样存在于这里不是吗……”  
-“触感只不过是脑感知的机能之一哦\~”  
-红莉栖轻快地后退了一步。随着她的身姿远去，手掌的触感一下子消失了。  
-“况且，在这里的你也不会幸福。永远也没办法从后悔中走出来。而我也一样……”  
+“触感只不过是大脑的感知机能之一哦\~”  
+红莉栖轻快地后退了一步。随着她的身姿远去，温热触感一下子消失了。  
+“况且，在这里的你也不会幸福。你永远也没办法从后悔中走出来，而我也一样……”  
 “就算在 β 世界线，也是一样的……我一直、一直都活在救不了你的悔恨之中。”  
 “但是，至少真由理能够幸福地活着对吧？”  
 “……真由理她……”  
-她什么都不知道。因为我就是这样希望的。希望真由理就那样什么都不知道地，带着笑容活下去。这个愿望现在姑且算是实现了。  
-“你的愿望是希望真由理能够露出笑容。我的愿望也是同样的。所以说，果然你的选择是没错的。”  
+她什么都不知道，因为我就是这样希望的，希望真由理就这样什么都不知道地，带着笑容活下去。这个愿望现在姑且算是实现了。  
+“你的愿望是希望真由理能够露出笑容，我的愿望也是同样的。所以说，你的选择果然是没错的。”  
 “……”  
 明明好不容易才能这样再度重逢，明明她还这样活在这里。  
 “啊，真是的！”  
 红莉栖毫不掩饰自己的焦躁，逼近过来。  
 “闹够了没有，冈部伦太郎！已经得出结论了不是吗？你不能留在这里，你非回去不可！  
- 不从梦里醒来是不行的啊。因为我已经……已经不想再看见你这么痛苦了……”  
+ 不从梦里醒来是不行的啊，因为我已经……已经不想再看见你这么痛苦了……”  
 “红莉栖……”
-“那么，这样下去也是浪费时间。我要开始了。”  
-斩钉截铁地扔下结论，红莉栖转过身去。存在于她的背影中的，是无可动摇的意志，是决意。我想起了刚来到这条世界线时候，一直伫立在那里的红莉栖。现在想起来，她站在电话微波炉（暂定）面前之时，就已经下定决心了。不让任何人知道，没和任何人告别，就决定要前往自己不存在的世界。在得出结论之前，到底经历了多少思想斗争呢？质疑了多少次，迷茫了多少次呢？如果说这就是她经历过这些而得出的结论——我没有阻止的权利。我无法阻止她。  
+“那么，这样下去也是浪费时间，我要开始了。”  
+斩钉截铁地扔下结论，红莉栖转过身去。存在于她的背影中的，是无可动摇的意志，是决意。我想起了刚来到这条世界线时候，一直伫立在那里的红莉栖。现在想起来，她站在电话微波炉（暂定）面前之时，就已经下定决心了。不让任何人知道，没和任何人告别，就决定要前往自己不存在的世界。在得出结论之前，到底经历了多少思想斗争呢？质疑了多少次，迷茫了多少次呢？如果说这就是她经历过这些而得出的结论——我没有阻止的权利，我无法阻止她。  
 “呐，冈部，在梦醒之前，我想做一个约定。”  
 “约定？”  
 “到达 β 世界线以后，请忘了我吧。”  
-这是和那天完全相反的祈求。那天——我决定选择 β 世界线的时候，红莉栖是这么说的——“不要忘记我。”然而，现在红莉栖所说的请求，和那时完全相反。  
+这是和那天完全相反的祈求。那天——我决定选择 β 世界线的时候，红莉栖说的是“不要忘记我”。然而，现在红莉栖说的，和那时完全相反。  
 “忘记你……这种事情，怎么可能做得到！”  
 这家伙总是这样，比起自己更在意他人，牺牲自己。这个请求，是为我考虑。明明就不想被被遗忘，明明是比别人更容易感到寂寞的人。
-“我都说了，这是梦哦。一般梦醒之后都会忘了的吧。”  
-固执、耿直。绝对不可能忘记。不会忘，但是——  
+“我都说了，这是梦哦，一般梦醒之后都会忘了的吧。”  
+固执、耿直，这样的她我绝对不可能忘记。  
 “小时候的噩梦，到现在也还记得啊！”  
 “你说谁是噩梦啊，真是的！”  
-我竭尽全力地逞强。这一点，恐怕红莉栖也是同样。  
-“总之，忘记我吧。不管是今天相遇的事情，还是之前经历的事情。这就是我的愿望。”  
+我竭尽全力地逞强着，恐怕红莉栖也是同样。  
+“总之，忘记我吧，不管是今天相遇的事情，还是之前经历的事情，这就是我的愿望。”  
 红莉栖又转过身来，伸出了小拇指，强硬的勾住我的小拇指。  
 “拉钩上吊\~说谎的人海马体被电极刺\~拉钩了\~”  
 “……韵脚真糟糕呐。”  
@@ -125,8 +121,8 @@
 
 ![](../static/image/0095-3.png)
 
-勾着的小拇指分开了。对视的目光也分开了。永别的时间就要到了。发送给过去的邮件——即使这是正确的，即使知道这就是红莉栖所希望的，即使如此——  
-“红莉栖！”——“冈部！”  
+勾着的小拇指分开了，对视的目光也分开了，永别的时间就要到了。发送给过去的邮件——即使这是正确的，即使知道这就是红莉栖所希望的，即使如此——  
+“红莉栖！” “冈部！”  
 声音重合在一起。  
 “怎、怎么了？”  
 “你、你才是，什么事？”  
@@ -153,10 +149,10 @@
 “是你自己要求的吧。”  
 她的声音——  
 “就算是这样，你说得那么轻松还是很让人生气……”  
-她的举止——  
-“又说要我忘记，又说不要我忘记。你到底要我怎么做嘛。”  
+她的动作——  
+“又说要我忘记，又说不要我忘记，你到底要我怎么做嘛。”  
 她的微笑——  
-“嘿嘿……开玩笑的，骗你的啦。骗你的……”  
+“嘿嘿……开玩笑的，骗你的啦，骗你的……”  
 “什么啊，骗我的啊……”  
 “是的，骗你的……”  
 我全都不要忘记——  
@@ -169,7 +165,7 @@
 这是宣告魔法时间结束的信号。  
 “啊……”  
 “呵……”
-我咽下了想要满溢而出的话语，只这么简单的回应一声。红莉栖对这样的我，露出了满足的笑容，转身朝向电话微波炉（暂定）。邮件的内容早已准备好了吧。她毫不犹豫，电话微波炉（暂定）开始发出雷鸣般的巨大声响。倒计时非常、非常漫长。在这个过程中，红莉栖一直背对着我。我也只是注视着她的背影。雷鸣逐渐变得激烈。显示面板的数字逐渐减小——  
+我咽下了想要满溢而出的话语，只这么简单的回应一声。红莉栖对这样的我，露出了满足的笑容，转身朝向电话微波炉（暂定）。邮件的内容早已准备好了吧，她毫不犹豫，电话微波炉（暂定）开始发出雷鸣般的巨大声响。倒计时非常、非常漫长。在这个过程中，红莉栖一直背对着我。我也只是注视着她的背影。雷鸣逐渐变得激烈。显示面板的数字逐渐减小——  
 然后，归零之时已至。  
 
 ![](../static/image/0095-4.png)
