--- a/article/sg0/doc/0133.md
+++ b/article/sg0/doc/0133.md
@@ -1,139 +1,129 @@
 # 盟誓的文艺复兴 - 11
 > 1.055821  
-> [ 2011/02/02 ] 
+> [ 2011/02/02 ] 晚上，由季报告篝自己跑出去了，才得知篝被 STRATFO 洗脑了，触发器正是 K6205 的音乐。同时凶真接到威胁电话，让他用红莉栖的笔记本电脑和硬盘来交换。凶真决定和铃羽一起主动进攻。  
 
-| [←prev](./0131) | [menu](../) | [next→](./0133) |
+| [←prev](./0132) | [menu](../) | [next→](./0134) |
 
 ---
 
-“抱歉，能在这里等我一下吗？”  
-“嗯……”  
-“让真由理和琉华子等着，我走到秋叶桥的中央。”  
-“和『Amadeus』接触的话，地点会被知道。”  
-“因此，才选了这里。”  
-“曾经，陷入无可奈何和悲叹的我，第一次向红莉栖倾述的地方。”  
-“……”  
-“等着大音量放着和那花哨的车体不相配的轻快的歌剧音乐的道路宣传车的通过，我按下了『Amadeus』的图标。”  
-“她立即出现了。”  
-“真是好久不见了呢。”  
-“是啊……”  
-“我还以为你把我忘记了。”  
-“怎么可能忘记。”  
-“怎么可能会忘记。”  
-“发生了很多事情……”  
-“到底是第多少次的告别呢。”  
-“和红莉栖多少次的重复着分别。”  
-“然而还是无法习惯。”  
-“那么，今天怎么了？”  
-“对你，想要问一些事情……”  
-“什么？又是“时间机器可以制作吗”这种话？”  
-“……”  
-“开玩笑的，接着说。”  
-“我说，如果。如果用自己的生命作为交换，就能拯救朋友的性命，你的话会怎么办？”  
-“……那个，不明白你提问的意图啊。”  
-“希望你能回答。”  
-“从我的话语和表情明白我是在认真说话，“红莉栖”的表情也认真起来。”  
-“……那个朋友是，重要的人吧？”  
-“啊啊……”  
-“我还有很多想要干的事情。不得不干的事情也有。但是……”  
-“就算如此……如果那个朋友或周围的人会变得幸福的话，我也会乐意的接受……也说不定……”  
-“红莉栖……”  
-“抱歉。事实上并没有遇到这种事情，只不过是想象而已，也无法断言……”  
-“就算如此，就算有一个人愿意记住我的事情的话……不会忘记我的人存在的话……”  
-“总之，把我的事情忘掉吧。今天发生的事情，还有至今为止发生的事情。”  
-“这就是我的愿望……”  
-“……”  
-“才不会忘记……”  
-“诶？”  
-“绝对。”  
-“我绝对不会忘记……”  
-“这是誓言。”  
-“为了接下来穿越无数时间的誓言——”  
-“冈部……先生？”  
-“……问了你无聊的问题抱歉了。”  
-“唔……这倒是无所谓……发生什么了？”  
-“不，什么都没发生，什么都……”  
-“……”  
-“那么就，再见，了。”  
-“等等!。”  
-“诶……？”  
-“啊，嗯。总觉得，无法再次相见了的感觉……”  
-“红莉栖……”  
-“……没有这种事情。”  
-“……是啊？我真是的，为什么忽然这么认为呢……”  
-“……会见面的，一定。”  
-“嗯。”  
-“是的，这并不是永远的诀别。”  
-“再见……”  
-“所以不说永别。”  
-“直到和你再次相遇的那时候——”  
-“再见……”  
-“嗯，再见，呢……”  
-“红莉栖……”  
-“下次见面到底会是什么时候呢。”  
-“但是一定，我会找到你的。”  
-“一定——”  
-“我回到真由理和琉华子的身边，把手机——“红莉栖”托付给她们。”  
-“……告别完了？”  
-“啊啊……”  
-“那么，拜托了。”  
-“嗯。”  
-“看着真由理他们的背影消失在流向车站的人群中，我向 LAB 走去。”  
-“刚才的道路宣传车，依然播着**轻快的音乐**从大路上穿过。”  
-
-作战开始已经经过了差不多 5 小时了。”  
-“屋内，只有桶子敲击键盘的声音在回响。”  
+作战开始已经过了差不多 5 小时了。我在 LAB 等待各方面的消息，屋内只有桶子敲击键盘的声音。  
 “怎样了，桶子？”  
-“到现在为止，应该还没有被发现。”  
+“目前应该还没有被发现。”  
 “还要花很长时间吗？”  
 “嗯——最快也要差不多 3 个小时。”  
-“果然，没有那么简单。”  
-“桶子也相当疲劳了，一直在努力着。”  
-“从真由理她们那里也传来适宜的联络。”  
-“真由理和琉华子，菲莉丝和铃羽这样的组合来行动，不愧是有着相当的交往，通过各自之间很好的连携，在东京里到处乱转。”  
-“据铃羽说，多次发现可疑的人物，萌郁也传来“那些家伙咬饵了”这样的联络。”  
-“现在为止，没有任何人遇到危险，Operation 平安无事地进行中。”  
-“但是，我不认为这种烟雾弹可能一直奏效。”  
-“虽然想尽可能早的把红莉栖的记忆数据删除，为此最终也只有让桶子再加一把劲了。”  
+果然，没有那么简单。桶子也相当疲劳了，一直在努力着。真由理他们每过一段时间就会在合适的时机联络我们。真由理和琉华子一组，菲莉丝和铃羽一组，不愧是老朋友了，彼此配合得很好，在东京到处乱转。据铃羽说，她多次发现了可疑人物，萌郁也传来『那些家伙咬饵了』的消息。到目前为止，没有任何人遇到危险，作战在平安无事地进行中。但是，我不认为这种烟雾弹能一直奏效。我想尽可能早地删除红莉栖的记忆数据，为此也只能让桶子再加一把劲了。  
 “不好意思啊，桶子。”  
-“不是说好不说这个吗。”  
-“回忆起 25 年后桶子的身影。”  
-“这家伙在那么遥远的未来世界也依然，一直陪着我。”  
+“不是说好了别说这些嘛。”  
+我回忆起 25 年后桶子的身影，这家伙在那么遥远的未来也始终一直陪着我啊。  
 
-“冈伦先生……稍微过来下？”  
-“直到刚才，因为太累睡在开发室里面的真帆，不知什么时候起来了。”  
-“嗯？怎么了？”  
-“这个……看看……”  
-“递给我一叠纸。”  
-“刚才的 STRATFO 的报告的打印版。”  
-“看样子，是醒来后详细的看过了。”  
+“冈伦先生……稍微过来下可以吗？”  
+真帆本来因为太累了在开发室里面补觉，不知道什么时候起来的。  
+“嗯，怎么了？”  
+“你看下这个……”  
+真帆递给我一叠纸。  
 “这是……？”  
+“STRATFO 人体实验的报告，我打印出来了。”  
+看样子，她醒了之后又开始工作了。  
+“这页是 STRATFO 实验对象的名单……”  
+纸上是密密麻麻的表格，写着名字、性别、年龄之类的信息。  
+“看这里……”  
+真帆小小的手指指向其中的一行。  
 
 ![](../static/image/0133-1.png)
 
-“这是被 STRATFO，作为实验品的人的名字的名单……”  
-“原来如此，被做成了一览表，写着人名和性别，年龄之类。”  
-“这里……”  
-“小小的手指指向其中的一个。”  
-“那里写着的是。”  
-“SHINA KAGARI。”  
 “椎名篝！？”  
-“她……被 STRATFO 当成了实验对象（marmot）了……”  
+“她……也是 STRATFO 的实验对象之一……”  
 “……”  
-“当然，这种可能性很大。”  
-“正因如此，那些家伙才一直在搜寻篝。”  
-“篝的脑中曾有红莉栖的记忆……”  
-“就算如此，果然像这样直接看到证据还是造成了冲击。”  
-“但是，似乎没有进入到最终实验。上面写着在那之前就逃走了。”  
-“这个话，让我的心放下了。”  
-“如果，篝的身体里还有红莉栖的记忆的话，前一个世界线发生的事情又会重演。”  
-“这个果然是，世界线变更带来的影响吧。”  
-“尽管那样，她多年在 STRATFO 这件事情还是没有错。”  
-“在那期间，接受了其他的各种各样的实验的事情……”  
+当然，这种可能性很大。正因如此，那些家伙才一直在搜寻篝。篝的脑中曾有过红莉栖的记忆……即使知道这些，像这样直接看到证据还是受到了冲击。  
+“但是，似乎实验没有进入到最终阶段，上面写着篝在那之前就逃走了。”  
+这句话，让我稍微放心了。如果篝的大脑里还有红莉栖的记忆的话，上一条世界线发生的事情就会重演。这个果然是世界线变更带来的影响吧。尽管如此，她被 STRATFO 控制了很多年也是事实。在那期间，接受了其他各种各样的实验……  
 “稍微，有些担心……”  
 “……”  
-“我一定想的和真帆是同一件事情。”  
-“篝现在，和由季两个人呆在桶子的藏身处。”  
+真帆和我想的一定是同一件事——篝现在，和由季两个人待在桶子的藏身处。  
+
+“嗯……谁啊，在正忙的时候……”  
+电话铃声打断了对话，有人给桶子打来了电话。  
+“嗯？阿万音氏……怎么了啊？”  
+桶子看了看手机，来电显示的是由季的名字。有种不祥的预感。  
+“嗨，喂喂，阿万音氏，怎么了？发生了什么？”  
+“……诶？篝碳她？”  
+“篝怎么了！？”  
+“……说是……不见了……”  
+“什么！？”  
+桶子把手机递过来，我立刻拿起来放到耳边。  
+“是我，冈部！篝不见了，真的吗！？”  
+“冈部先生，实在抱歉！明明有我跟着……”  
+“到底是为什么！？被谁带走了吗！？”  
+“不是，是……篝自己跑出去了……我拼命阻止过，但她力气好大……”  
+“自己跑出去……？”  
+怎么回事？果然由季……不，不会，如果是由季干的，她没必要特地向我汇报。但是，究竟是为什么，篝会自己跑走？  
+“能开到扬声器模式吗？我也想问几句。”  
+我按真帆说的把通话切到扬声器模式。  
+“由季小姐，请你详细讲讲篝跑出去之前的情况，有什么奇怪的事情吗？”  
+“并没有……之前我们一直在聊天……”  
+“有没有看到什么奇怪的影像？或是声音之类的……”  
+“没有……啊，等等，说起来，外面传来了奇怪的音乐。  
+ 似乎是道路宣传车……我还在想，声音未免太大了……”  
+道路宣传车？莫非是白天见过的那辆？  
+“就是它。刚才的文件里写了，STRATFO 进行过各种实验，其中也包括 *Brain·Washing*。”  
+“洗脑吗？！”  
+“应该是被洗脑成，只要听到特定的音乐，就会自发行动。  
+ 不然，我不认为，篝会在这种情况下自己跑出去。”  
+道路宣传车播放的那个曲子……K6205——把篝引向魔鬼的笛声——魔笛！  
+“文件里也写了，因为椎名篝的适合度非常优秀，眼下正在搜索其去向……”  
+“可恶！！”  
+恐怕不仅仅是秋叶原，这辆车应该在各地都开过了。完全中招了……  
+“怎么办，冈伦……”  
+让篝跑出去的是 STRATFO 的人，这点不会错。这样一来，我们能做的事情是——  
+
+电话铃声再次响了起来，这次是我的临时手机。为了这次作战，我拜托菲莉丝帮忙准备了几部额外的手机，让大家用新的号码联络。根据来电显示，电话是从篝拿着的手机打来的——恐怕不是篝本人的联络，究竟是什么人？也只能先接听看看对方要干什么吧。  
+【是 *Okabe·Rintaro* 吧？】  
+听筒里传来的声音明显经过了变调处理，充满了无机质感，更加让人毛骨悚然。  
+“对，是我。你是谁？”  
+【椎名篝在我们的手里。交换条件不用说你也知道吧？】  
+红莉栖的笔记本电脑和硬盘。  
+“给我点时间考虑。”  
+【考虑？有什么考虑的必要？】  
+“……”  
+【明天交换，地点和方法之后联络你。】  
+对方单方面说完，就挂断了电话。  
+“说要用红莉栖的笔记本电脑和硬盘交换……”  
+“那，怎么办？”  
+“可恶……”  
+
+“篝居然被洗脑了……”  
+接到那通电话之后，我立即叫铃羽回来了，她听完我讲述的情况后悔恨地咬牙切齿。同时我也请萌郁来到 LAB，希望能作为助力。
+“从你的角度判断，假如听从对方的要求，他们会把篝还给我们吗？”  
+“……不会。”  
+萌郁的回答很直白。  
+“我也不认为。对方是会用洗脑这种肮脏手段的人，只要没有用了，会毫不留情地干掉。”  
+“最坏的情况，你也会被杀掉……”  
+对方特地指名了我，也就是说，他们已经知道，我掌握着一定程度的情报。回想至今为止的袭击事件，他们一定不会手下留情。而且那伙人想要的，是红莉栖的遗产。而我不想再让她的遗产和记忆，继续成为纷争的导火索。这样的话，我该做的事情只有一个——  
+“只能我们这边主动进攻，夺回篝了。”  
+虽然很危险，但是只能这样了。真由理他们直到这个时间依然在努力奋斗，因此那些家伙应该还认为，我现在正在城市内辗转逃亡。  
+“你说发起进攻……我们连对手在哪儿都不知道啊？”  
+“我知道在哪儿。”  
+“真的吗！？叔叔，你什么时候……”  
+“铃羽，愿意帮忙吗？”  
+“*Okey-dokey!*”  
+我把视线转向萌郁，她摇了摇头。  
+“这种程度……恕难奉陪……”  
+也是啊。  
+“不行啊，就你们两个，太危险了。”  
+“不，人多了行动反而更危险。”  
+而且我知道命运已经决定了，不会让我在这里死掉的。  
+“不告诉真由理他们吗？”  
+“说了也只会让他们担心的。”  
+“……”  
+真帆见劝不住我，便一脸担心地不再说话了。  
+“桶子，拜托继续解锁，还有手机保持通话状态。”  
+“*Okey-dokey!*”  
+“叔叔，这个给你……”  
+“格洛克……”  
+铃羽递给我一把手枪，萌郁一眼就认出了手枪的型号。  
+“如果有个万一，就自己保护自己。”  
+“……”  
+我虽然很纠结，最后还是收下了这把枪。初次拿在手上的枪，比想象中的重了很多。  
 
 
 <br/>
@@ -141,4 +131,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0129) | [menu](../) | [next→](./0131) |
+| [←prev](./0132) | [menu](../) | [next→](./0134) |
