--- a/article/sg0/doc/0106.md
+++ b/article/sg0/doc/0106.md
@@ -128,7 +128,7 @@
 “那么我也可能会……不，我一定会造出来给你看。”  
 这样的话，也许我也能帮上忙。  
 “问题是记忆数据在哪里，这个只能想办法调查了。”  
-虽说如此，掌握的信息还太少了。只知道是外国的军队——应该是西方的军队。这也不是特别精确的情报。如果说有人掌握着关键情报，就是那个骑手服的女人了……一瞬间我脑海中浮现出一个人——  
+虽说如此，掌握的信息还太少了。只知道是外国的军队——应该是西方的军队。这也不是特别精确的情报。如果说有人掌握着关键情报，就是那个黑色骑手装的女人了……一瞬间我脑海中浮现出一个人——  
 “想到什么好方法了吗？”  
 “不，没什么。”  
 那个人不是阿万音由季。不可能是她……  
