--- a/article/sg0/doc/0129.md
+++ b/article/sg0/doc/0129.md
@@ -73,14 +73,15 @@
 “没、没事吧，冈伦！？”  
 真由理她们慌张地过来探头看我的脸色。的确，非常痛，大脑可能受到了比 *Reading·Steiner* 或时间跳跃时更加严重的伤害。可是——  
 
-“哈……”  
+“哼——”  
 “冈部、先生……？”  
 多亏这一拳，我清醒过来了。  
-“哈哈哈——”  
+“哼哼——”  
 我只要去做我能做到的事情就行了。  
-“哈哈哈哈哈——”  
+“哼哼哼哼哼——”  
 “冈……伦……？”  
-“**呼哈哈哈哈哈！！！**”  
+“……？”  
+“**哼——哈哈哈哈！！！**”  
 “难、难道……是凶真？”  
 “冈伦……”  
 “你说错了哦，真由理……我是，凤凰院……凶真……！”  
