--- a/article/sg0/doc/0134.md
+++ b/article/sg0/doc/0134.md
@@ -1,127 +1,94 @@
 # 盟誓的文艺复兴 - 12
 > 1.055821  
-> [ 2011/02/02 ] 
+> [ 2011/02/02 ] 凶真和铃羽闯入了东京电机大学地下的 STRATFO 支部，结果发现莱耶丝杀光了其他人绑架了篝。她的真实身份是 DURPA 军方。  
 
-| [←prev](./0131) | [menu](../) | [next→](./0133) |
+| [←prev](./0133) | [menu](../) | [next→](./0135) |
 
 ---
 
-“嗯……谁啊，在正忙的时候……”  
-“打断对话的响的不停电话，似乎是桶子的。”  
-“嗯？阿万音氏……怎么了啊。”  
-“有不好的预感。”  
-“嗨，喂喂。阿万音氏，怎么了？发生什么了？”  
-“……诶？篝碳她？”  
-“篝怎么！？”  
-“……不见……了……”  
-“啥！？”  
-“一把抢过来递来的手机，放到耳边。”  
-“是我，冈部！篝不见了，真的吗？”  
-“冈部先生！实在抱歉！明明有我跟着在！”  
-“到底是为什么！？被谁带走了吗！？”  
-“不是。这个……篝自己……我拼命的阻止了，但是好强的力气……”  
-“自己……？”  
-“怎么回事？”  
-“果然由季……”  
-“不，不会是这样。”  
-“如果由季有动手的话，没有特地向我汇报的必要。”  
-“但是，那么究竟是为什么篝会自己跑出去？”  
-“能开到扬声器模式吗？我也想问几句。”  
+我们来到了神田的某个建筑群。里面还亮着灯，就算是这个时间，大门也还开着——大学就是这个样子。不出所料，我们毫无困难地进入了建筑物内。  
+“篝在这里……？”  
+“嗯，应该是的。”  
+如果 2036 年的桶子所言属实，STRATFO 的支部就在我的母校——东京电机大学的地下。这个神田校区里，有 1 号馆、5-7 号馆，还有 11-15 号馆和鳞次栉比的校舍，其中，只有 5、6、10、15 号馆是与周围的建筑分散开来的，其他校舍都集中在一个区域内。有地下室的只有 11 和 15 号馆，所以我认为，STRATFO 的支部应该就在我们所处的这个 11 号馆，因为这里不仅最新，设备齐全，也有 17 层之高，出入的人群也很多。虽然不知道这里到底有多少 STRATFO 的人，但是应该有一部分人出去搜捕我了。如果真是这样，现在这里肯定正处在人力不足的状态。铃羽也在，我们有胜算。  
+“这边。”  
+我带着铃羽，径直向楼梯走去。虽然馆内有 3 处电梯，但是铃羽提出，如果发生了紧急事态，活动空间不足的电梯会很危险。问题在这之后。地下有两层，大小房间加起来有 20 间以上，哪一个才是支部的所在呢？  
 
 ![](../static/image/0134-1.png)
 
-“我按她说的把通话切到了扬声器模式。”  
-“由季小姐，篝跑出去之前的情况详细给我讲讲。有什么奇怪的事情吗？”  
-“并没有……之前一直在聊着天……”  
-“看了什么奇怪的影像吗？或者是声音之类……”  
-“不……啊，请等等。话说起来，外面传来奇怪的音乐。似乎是什么道路宣传车……我还在想格外大的声音呢……”  
-“道路宣传车？”  
-“莫非是白天开过的那个？”  
-“就是它。”  
-“刚才的文件里写着。过去，STRATFO 进行的各种实验。”  
-“实验中也包含了 *Brain·Washing*。”  
-“洗脑吗？！”  
-“应该是只要听到特定的音乐，就会自发的行动起来，被这样洗脑了。”  
-“不这样想的话，我不认为会在这种情况自己跑出去。”  
-“道路宣传车播放的那个曲子——”  
-“K6205……”  
-“那个是，把篝引向魔鬼的笛声——魔笛！”  
-“文件里也写了。因为椎名篝的适合性非常优秀，眼下正在搜索去向……”  
-“可恶！！”  
-“恐怕不仅仅是秋叶原，还在各种地方开过了吧。”  
-“完全中了这招。”  
-“怎么办，冈伦……”  
-“把篝叫出去的是 STRATFO 的那群人这点不会错。”  
-“这样一来，我们能做的事情是——”  
+“叔叔，这边。”  
+“你知道地方吗？”  
+“我想起来了，我以前入侵过这里。  
+ 虽然我那时候看到的建筑物已经倒塌，外观也截然不同，但肯定没错。”  
+铃羽毫不犹豫地向里面走去。她拿着枪，稳稳当当地放低腰板，足下毫无声响地跑步的样子，简直像一只猫。然后，她在一个房间前站定，向我点了点头。这个房间与其他房间如出一辙，但是没有铭牌。这里面的确是一个大房间，本该是一个配电室的。  
+“我去救篝。叔叔，自己保护好自己。”  
+“啊，嗯……”  
+我掏出插在腰带后方的格洛克，相当有分量。虽然大体向铃羽请教了一下使用方法，但是没有开枪经验的我到底能不能用好还是个问题，用来虚张声势的话应该还是能做到的。”  
+
+“要上了，3、2、1……”  
+倒数结束的瞬间，铃羽一枪射烂了门把手，踹开门，成功突入了房间，动作行云流水。我紧随其后跑进房间，立刻注意到情况有异。最初是闻到一股异臭，令人作呕的铁锈味，那是血的味道。房间的地板上，弥漫着一层血泊，乍一看有四五个人倒在血泊中。当然，这并不是铃羽做的，在我们来之前就已经成这样了。  
+（……怎么回事？）  
+我跟着铃羽慢慢向前推进的铃羽，走向房间深处。倒下的既有日本人，也有一眼就能看出是外国人的。更深的地方似乎还有房间，半开着的门后，倒着一个体型魁梧的金发白人。站在他的旁边是——  
+“比我想的要早呢，*Rintaro*。”  
+“……怎么会。”  
+叫着我的名字的那个性感的声音，还有那外国的腔调……  
 
 ![](../static/image/0134-2.png)
 
-“电话再次响了起来。”  
-“这次是我的手机。”  
-“为了这次的作战，我让菲莉丝帮忙准备了几部手机。”  
-“大家联络用的手机和，让篝拿着的手机。”  
-“然后——”  
-“——！”  
-“来电，是从篝拿着的手机打来的。”  
-“恐怕并不是篝本人……”  
-“究竟是什么人。”  
+“莱耶丝教授……？”  
+“看到你这么精神真是太好了。”  
+“为什么……”  
+“只是想让他们，把我在找的东西还给我来着。”  
+莱耶丝教授如同踏着舞步飘然转身。在她身后，篝坐在一个带有奇怪的装置的椅子上。  
+“篝！”  
 “……”  
-【是 *Okabe Rintaro* 吧？”  
-“被加工的声音的无机质更加让人毛骨悚然。”  
-“啊，是的。你是？”  
-【椎名篝在我们的手里。交换条件不用说你也知道吧？】  
-“红莉栖的 PC 和硬盘。”  
-“给我点考虑时间。”  
-【考虑？有什么考虑的必要。】  
-“……”  
-【交换定在明天。地点和方法之后联络你。】  
-“单方面说完，电话被挂断了。”  
-“说要和红莉栖的 PC 和硬盘交换……”  
-“那，怎么办？”  
-“……”  
+“怎么了，篝！听不到吗？”  
+篝的头被一个奇怪的装置套着，无论我怎么呼唤，她都坐在椅子上纹丝不动。  
+“哎呀，她好不容易能安稳地睡上一觉，要是被叫起来可就太可怜了。”  
+与当初见到的开朗模样不同，现在的莱耶丝脸上挂着一副无法想象的尖酸嘴脸。  
 
-“篝被洗脑了这种事情……”  
-“听了我们的话，玲羽咬着牙后悔着。”  
-“我在那通电话之后，立即把铃羽叫了回来。”  
-“同时，也让桐生萌郁回到了 LAB。”  
-“希望你直接告诉我。假设听从对方的要求，你认为篝会还给我们吗？”  
-“……不认为。”  
-“从萌郁的嘴里说出的，直接的回答。”  
-“我也不认为。对方是会用洗脑这种肮脏手段的人。只要没有用了，会毫不留情的干掉。”  
-“最坏的情况，你也会被杀掉……”  
-“特地指名我，也就是他们已经掌握了我知道一定程度的情报的证明。”  
-“回想至今为止的袭击事件，他们一定会毫不留情的。”  
-“而且那伙人想要的是，红莉栖的遗产。”  
-“红莉栖所留下的遗产，还有她自身的记忆——不想让这些再继续成为纷争的种子。”  
-“这样的话，我该做的事情只有一个。”  
-“只有这边发起进攻，夺回篝了。”  
-“虽然很危险，但是只有这样了。”  
-“真由理她们直到这个时间还依然在努力奋斗。”  
-“因此那些家伙应该还认为我现在还在都内辗转逃亡。”  
-“你说发起进攻，……连对手在哪里都不知道？”  
-“在哪里的话我知道。”  
-“真的吗！？叔叔，什么时候……”  
-“铃羽，愿意帮忙吗？”  
-“*Okey-dokey!*”  
-“视线转向萌郁，她摇着头。”  
-“这种程度……恕不奉陪……”  
-“也是啊。”  
-“不行哟。两个人，太危险了。”  
-“不，比起人多行动起来危险可能更少。”  
-“而且我还暂时不会死的，这是命运定下来的。”  
-“不对真由理她们说吗？”  
-“说了也只会让她们担心的。”  
+![](../static/image/0134-3.png)
+
+“小心！那家伙，是军人！”  
+铃羽早已将枪口对准莱耶丝，但是莱耶丝好像并不在意。  
+“军人？”  
+话说回来，天王寺曾说过，搜捕篝的人，跟西方的军队有关，一般的谍报机关怎么可能自绝性命。  
+“那边的那位小姐是何方神圣啊？”  
+“把篝还来。”  
+“表情不错啊，日本竟然也有能露出这种表情的人，我是闻所未闻呢。  
+ 总之，把枪交给我，否则 *Shiina·Kagari* 就要葬身于此了哦。”  
+“我会在你碰篝的一瞬间杀死你。”  
+“啊是吗？我进行的是组织的行动。就算杀了我一个，情况也不会有任何变化哦。”  
 “……”  
-“桶子，拜托继续解锁，还有手机保持通话状态。”  
-“*Okey-dokey!*”  
-“叔叔，这个……”  
-“铃羽递给我的是，自动手枪。”  
-“格洛克……”  
-萌郁一眼就认出了手枪的型号
-“有个万一，自己来保护自己。”  
+“铃羽……”  
+“……唔。”  
+铃羽一脸懊恼地盯着她慢慢蹲下，将枪放在脚边。  
+“真是乖孩子呢。然后，把双手背到头后乖乖站好。  
+ 然后是 *Rintaro*，我应该跟你提出了交换条件吧，你有乖乖带过来吗？”  
 “……”  
-“我虽然很纠结，还是收下了这把枪。”  
-“初次拿在手上的枪，比想象中的重了很多。”  
+“啊啦啊啦，真是坏孩子呢。你没带过来的话，我这边也不能把 *Shiina·Kagari* 交给你呢。”  
+虽然她说篝睡着了，但仔细看可以发现，她的眼睛并没有完全闭上，微微张开的眼睑下是一双空洞的瞳孔，看不到一丝理性的光芒。  
+“你对篝干了什么？”  
+“很遗憾，我还什么都没干呢，只是稍微让她听了一下他们用的摇篮曲而已。  
+ 但是，你看起来并不想对我的交换条件有所回应啊，要不要现在开始干点什么呢？”  
+她一脸迷乱地用枪身轻抚着篝的脸颊。  
+“红莉栖的笔记本电脑和硬盘被藏在一个特殊的地方。  
+ 你不交出篝的话，我这边也不打算告诉你。先把篝放开。”  
+“讲条件是没有用的哦，*Rintaro*。  
+ 如果你不想交出来的话，那我就用我的方式吧。”  
+说不上威胁也说不上恐吓，莱耶丝就像进行着日常对话一样。被鲜血的颜色与气味簇拥着，格外助长了这种糟糕的感觉。  
+“这是……你干的吗？”  
+“是啊，如果他们少做一些多余的事就能多苟延残喘一会儿了，真可惜呢。”  
+“为什么要做这种事？”  
+“很简单的道理，因为他们发觉我的真实身份了。”  
+“真实身份……”  
+“那边的小姑娘不是说过了吗？”  
+“军方吗？”  
+“同时也是研究者——DURPA，反正说出来你也不知道吧。”  
+
+“DURPA……美国国防高等研究计划局？莱耶丝教授……怎么会……？”  
+通过小型蓝牙耳机传来了真帆的声音。以备不时之需，我一直与桶子保持通话状态。  
+“冈伦……再帮我拖一段时间。”  
+在这种情况下，拖延时间……真是离谱的要求。但是，迄今为止，我也拜托了桶子很多离谱的事，这次应该由我来响应他的离谱了。不能让她对篝下手。铃羽失去了武器，难以行动。我必须要做些什么，得驾驭这个场面才行。  
 
 
 <br/>
@@ -129,4 +96,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0129) | [menu](../) | [next→](./0131) |
+| [←prev](./0133) | [menu](../) | [next→](./0135) |
