--- a/article/sg0/doc/0135.md
+++ b/article/sg0/doc/0135.md
@@ -1,135 +1,123 @@
 # 盟誓的文艺复兴 - 13
 > 1.055821  
-> [ 2011/02/02 ] 铃羽和凶真闯入了东京电机大学地下室的 STRATFO 支部，结果发现莱耶丝杀光了其他人绑架了篝。她的真实身份是 DURPA 军方。  
+> [ 2011/02/02 ] 莱耶丝是的目的是创造 AI 战士。凶真极力争取时间。  
 
-| [←prev](./0131) | [menu](../) | [next→](./0133) |
+| [←prev](./0134) | [menu](../) | [next→](./0136) |
 
 ---
 
-“位于神田的这栋建筑物，还亮着灯。”  
-“就算是这个时间，门还是开着的。”  
-“大学就是这个样子。”  
-“不出所料，毫无困难的进入到了建筑物内。”  
-
-“篝在这里……？”  
-“嗯，应该是这样。”  
-“如果 2036 年的桶子所言属实的话，STRATFO 的支部就在我的母校，这个东京电机大学里。”  
-“大学的神田校区里，有 1 号馆、5-7 号馆，还有 11-15 号馆和鳞次栉比的校舍。”  
-“这里面，只有 5、6、10、15 号馆是与周围的大楼分散开来的，这以外的校舍都是集中在一个区域内的。”  
-“其中只有 11 和 15 号馆有地下室。”  
-“所以，我想 STRATFO 支部恐怕就在我们所处的这个 11 号馆。”  
-“因为这里不仅最新设备齐全，也有 17 层之高，出入的人群也是相应的多。”  
-“虽然我们不知道这里到底有多少 STRATFO 的人，但是应该有一部分人出去搜捕我了。”  
-“如果真是这样，现在这里肯定正处在人力不足的状态。”  
-“铃羽也在这边。”  
-“我们有胜算。”  
-“这边。”  
-“我催促着铃羽，径直向楼梯走去。”  
-
-![](../static/image/0135-1.png)
-
-“虽然馆内有 3 处电梯，但是铃羽提出，如果发生了紧急事态，没有活动之处的电梯很危险。”  
-“问题在这之后。”  
-“地下 2 层，大小房间加起来有 20 间以上。”  
-“这之中哪一个才是供支部使用的呢。”  
-“叔叔，这边。”  
-“你知道地方吗？”  
-“我想起来了，我以前入侵过这里。”  
-“虽然我所知的那个建筑物已经倒塌，外观也截然不同，但肯定没错。”  
-“铃羽毫不犹豫地向里面走去。”  
-“她拿着枪，稳稳当当地放低腰板，足下毫无声响地跑着的样子，简直像一只猫。”  
-“然后，她在一个房间前站住，向我点了点头。”  
-“与其他房间如出一辙。”  
-“但是没有铭牌。”  
-“这里面的确是一个大房间，本该是一个配电室的——”  
-“我去救篝，叔叔，自己保护好自己。”  
-“啊，嗯……”  
-“我掏出插在腰带后方的格洛克。”  
-“相当有分量。”  
-“虽然大体上请教了一下使用方法，但是没有开枪经验的我到底能不能用好还是个问题，只是恐吓应该还是能做到的。”  
-
-“上了哦。3、2、1……”  
-“用倒计时作为信号，铃羽一枪射烂了门把手，踹开门，成功突入了房间。”  
-“简直有如行云流水一般的动作。”  
-“紧随其后跑进房间的我，立刻注意到了异常情况。”  
-“最初感觉到的是一股异臭。”  
-“呛人的铁臭。”  
-“那是血的气味。”  
-“房间的地板上，弥漫着一层血泊。”  
-“那里倒着一些人。”  
-“乍一看有 4、5 个人。”  
-“当然这并不是铃羽做的。”  
-“在我们来之前就已经是这样了。”  
-“……怎么回事？”  
-“跟随着慢慢走过去的铃羽，我向房间的深处前进。”  
-“倒下的既有日本人，也有一眼就能看出是外国人的。”  
-“似乎更深的地方还有房间。”  
-“半开着的门后，倒着一个体型魁梧的男人。”  
-“他的旁边是——”  
-“比我想的要早呢，*Rintaro*。”  
-“……怎么会。”  
-“叫着我的名字的那个性感的声音。”  
-“还有那外国的腔调。”  
-“莱耶丝教授……？”  
-“看到你这么精神真是太好了。”  
-“为什么……”  
-“只是想让他们还我在找的东西来着。”  
-“莱耶丝教授如同踏着舞步飘然转身。”  
-“在她身后，篝在那里坐着。”  
-
-![](../static/image/0133-2.png)
-
-“篝！”  
+“军、军方的人，为什么……？”  
+“本来，我所属的队伍是研究 *Brain·Washing* 的。”  
+“洗脑……那么说，篝是被……”  
+“话说在前面，把她搞成这样的并不是我，而是他们哦。”  
+他们——是说倒在那里的那伙人吧。  
+“谁知道呢。说起来，为什么军人要研究洗脑？”  
+本来没必要问这些，但是，我必须在桶子入侵成功之前，想方设法拖延时间。  
+“那还用说？肯定是为了创造能被随心所欲差遣的战士啊。  
+ 为了创造不会抱怨，不畏惧死亡，贯彻为国捐躯精神的最强战士……  
+ 这也不是什么稀罕事呀，一百年前甚至更早，全世界就已经在进行了嘛。  
+ 但是呢，我们发现，不用通过洗脑这么麻烦的手段，也能创造出最强的战士……  
+ 那就是 AI 战士哦——”  
+“AI 战士……”  
+乍一听是个非常俗的词汇，却相应地使人毛骨悚然。  
+“原来如此……你想要将人工智能植入士兵的大脑里吧。  
+ 这样，你们就能大量孕育出，拥有同样程度的高等头脑与思考能力的战士……”  
+“嚯——？”  
+“而且，如果把有关特殊能力的记忆安装进全体士兵的大脑里，  
+ 所有人甚至都能变得全能，无论什么样的任务都能完成。”  
+“就是这样！*Rintaro*，你理解得真快呢。  
+ 而且，将来还能依靠意识共享，安排更加精密的深度合作呢。  
+ 怎么样？很厉害吧？”  
+“那种事，不可能会被许可……”  
+“真是陈词滥调呢。”  
 “……”  
-“怎么了，篝！听不到吗？”  
-“篝的头被一个像是机械的奇怪的东西盖住了。”  
-“无论我怎么呼唤，她都坐在椅子上纹丝不动。”  
-“哎呀，她好不容易能安稳地睡上一觉，要是被叫起来那可就太可怜了。”  
-“异于当初相识时的开朗，那是一副无法想象的尖酸的笑脸。”  
-“小心！那家伙，是军人！”  
-“铃羽早已向着莱耶丝摆出枪口。”  
-“但是莱耶丝好像并没有在意她。”  
-“军人？”  
-“话说回来，天王寺曾说过。”  
-“在搜捕篝的，跟西方的军队有关。”  
-“一般的谍报机关怎么可能自绝性命，他这么说。”  
-“那边的，何方神圣？”  
-“把篝还来。”  
-“不错的表情啊，日本竟然也有能露出这种表情的人，我是闻所未闻呢。”  
-“总而言之，把枪交过来。否则 *Shiina·Kagari* 就要葬身于此了。”  
-“我会在你杀死篝的那一瞬杀死你。”  
-“啊是吗。我进行的是组织的行动。就算杀了我一个，情况也不会有任何变化。”  
+虽然我担心铃羽会不会被激怒而上前揍她，但铃羽一直都保持着冷静。莱耶丝与篝近在咫尺，无论动作多么灵敏，在没有枪的情况下，要是篝先一步遭了毒手就全盘皆输了。铃羽应该正在专注地绷紧神经，分析现状，为了找到反击的机会。  
+“听好了，我们可是维持着世界的治安哦。正因为有我们的军队，这个世界才能保持和平哦。  
+ 能够成为捍卫和平的战士，这应该也是他们的夙愿。”  
+真是独断的歪理，根本不可能有人接受。但是——  
+
+“哈哈哈……有趣……莱耶丝教授——不，莱耶丝！你这家伙，相当有趣啊！”  
 “……”  
-“铃羽……”  
-“……唔。”  
-“铃羽一脸懊恼地，将枪放到了脚边。”  
-“真乖呢。顺便，把双手背到头后乖乖站好  
-“然后是 *Rintaro*，我应该跟你提出过交换条件吧，你有好好带过来吗？”  
+铃羽瞥了我一眼，虽然眼神中好像带着一点斥责，但她并没有说什么。  
+“*Rintaro*……？”  
+“吾非伦太郎！”  
+我现在的任务——就是在桶子解锁成功之前拖延时间。那么现在就演上一出吧，竭尽全力地饰演一个小丑，这才是我的使命。  
+“吾名为凤凰院凶真！欲图颠覆世界支配构造，渴望着混沌的男人！”  
+“……你这演的是哪一出？”  
+“哈哈哈……就由我狂气的疯狂科学家，凤凰院凶真赐予你认可吧！你这家伙，相当的疯狂啊！”  
+“疯皇……什么？”  
+“凤凰院凶真！冈部伦太郎不过是用来欺骗世界的虚假之姿！其真身便是本大爷！  
+ 如不死鸟般复苏的，疯狂科学家！”  
+“噗……哈哈哈，什么啊这是！你，真是 *unique* 呢！啊哈哈。”  
+一开始目瞪口呆的莱耶丝，马上恢复了游刃有余的笑容，但我不能在此胆怯。  
+“莱耶丝，迄今为止你这家伙做过的事，我已全部知悉——  
+ 你这家伙为了研究 AI 战士，作为教授潜入了维克多·孔多利亚大学。  
+ 在那个过程中，你注意到了『Amadeus』项目，对吧？”  
+“嗯，如你所述。『Amadeus』真是个相当有趣的项目呢。但是，更有趣的是——  
+ 隐藏在『Amadeus』项目背后，忽隐忽现的他们的存在哦。”  
+莱耶丝简直就像对待物品一般，随意踩着横倒在脚边的尸体。  
+“果然，我深入探查了一番，发现了不得了的东西呢。  
+ 至于发现了什么，你也是知道的吧？”  
+“时间机器……是吧？”  
+莱耶丝露出妖艳的笑容点了点头。  
+“原来如此啊……作为人们的终极幻想，公认绝对做不出来的时间机器，  
+ 你注意到记载着那个理论的论文了吗？如果得手，世界的霸权也能纳入囊中！  
+ 哼！不过，太无聊了啊……你们这群家伙考虑的事情都如出一辙。”  
+“你说……无聊？”  
+“嗯，无聊透顶！”  
+“世界的霸权？为了国家，为了组织，为了机关……全都是这么渺小的目的啊。  
+ 为了那种东西，而利用世纪性的伟大发明，简直是科学家中的败类。”  
+“我在科学家之前是军人，是可以为国捐躯的人。  
+ 如果我国将世界霸权掌握在手中，我们就会有相应的抑制力。  
+ 这不仅是为了这个世界，也是为了全人类啊！  
+ 所以绝不能让其他国家抢先下手。  
+ 只要得到这颠覆性的理论，我们就能守住世界的平衡！就能维持世界的和平！”  
+ 我绝不允许被其他国家……更不用说被民间企业得手！”  
+她的声音因为兴奋变得越来越高亢。  
+“这就是你对这么多人下杀手的理由吗？我再说一遍……无聊透顶！”  
+“啊啦是吗？我也觉得这样对他们不好。  
+ 我原本只是想让他们随意行动，等到全部都得手之后，再让他们交出数据而已呢。”  
+“那，为什么杀了他们？”  
+“我的一个间谍部下捅了个篓子啊，我也认为这一点是我们的失误哦。  
+ 但是……他们也有不对的地方啊。  
+ DURPA 里也有民间研究者的哦，我们都提出给他们留出位置了，  
+ 谁让他们非要得寸进尺地摆出那么多要求呢，我也不想失去这么多有才能的人啊……”  
+莱耶丝毫不避讳，甚至面带笑意地说着。从表情就能看出，她的话绝非发自真心。  
+“那么，我有一个提案。*Okabe·Rintaro*……你，要不要加入我们 DURPA？”  
+“什么……？”  
+“啊啦，看你这意外的表情，你以为我是为了什么才特意跟你说这些啊。  
+ 作为冥土的礼物……什么的，这种事只会发生在日本的 SAMURAI CINEMA（武士剧）里吧。  
+ 不用担心，我们也不论国籍什么的，如果你想要，连绿卡也能给你准备好。”  
+“……也就是说，你承认我凤凰院凶真的才能了吗？  
+“当然，我才不会向没有才能的人搭话呢。  
+ 你有才能，而且，还是 *Makise·Kurisu* 的朋友。”  
+看来她看中我的真正原因是后者，太显而易见了。  
+“我有可能从牧濑红莉栖那听到了有关时间机器理论的事……  
+ 你是这么期待的吧，所以才说想要我。”  
+“派得上用场的人就要拉拢，也要付出相应的回报，这就是我们生活的世界的准则嘛。”  
+“也就是说，一旦我失去了用处，我也会落得跟那些倒下的人一样的下场吧。”  
+“那就要看你的勤奋和表现了嘛……”  
+莱耶丝开心地笑着，踱步绕到篝的身后。乍一看是很普通的动作，但铃羽一动不动，大概她没有露出一点破绽吧。  
+
+（桶子……还没好吗……？）  
+我差不多快拖到极限了。  
+“嘛，你慢慢考虑……”  
+“哼哼……哼哼哼哼——”  
+“……？”  
+“哼——哈哈哈哈！竟然能看中我的才能，看来你有 *Highest·Eye* 啊！”  
+“*Highest Eye*……？”  
+“眼光好的意思！没想到你身为一介美利坚人，竟然连这个都不明白！  
+ 但是算了，刚刚说你是科学家中的败类，我就收回这句话吧。  
+ 毕竟，你看出了我的才能呢。”  
+“啊啦，这么说，你是准备答应我的提案吗？”  
+“我拒绝！”  
+“什……”  
+“要问为何，因为本大爷可是凤凰院凶真啊！  
+ 狂气的疯狂科学家，必须是一个孤高的存在。  
+ 无论何时都不附属于任何事物，这便是宿命……”  
 “……”  
-“哎呀哎呀，真是坏孩子。你没带过来的话，我这边也不能把 *Shiina·Kagari* 交给你呢。”  
-“虽然她说篝睡着了，但仔细看可以发现，她的眼睛并没有完全闭上，。”  
-“微微张开的眼睑下是一双空虚的双瞳，看不出一丝理性的光芒。”  
-“你对篝干了什么？”  
-“遗憾的是，我还什么都没干呢。只是稍微让她听了一下他们用过的童谣。”  
-“但是，你看起来并不想对交换条件有所回应啊，要不要现在开始干点什么呢。”  
-“她一脸迷乱地用枪身轻抚着篝的脸颊。”  
-“红莉栖的笔记本电脑和移动硬盘被藏在了一个特殊的地方。”  
-“你不交出篝的话，这边也没有告诉你的打算。”  
-“先把篝放开。”  
-“讲条件是没有用的哦，*Rintaro*。”  
-“如果你们不想交出来的话，那就让我用我的方式吧。”  
-“说不上威胁也说不上恐吓。”  
-“莱耶丝就像进行着日常对话一样说道。”  
-“被鲜血的颜色与气味所簇拥着。”  
-“格外助长了这种糟糕的感觉。”  
-“这是，你干的吗？”  
-“是啊。如果他们少狗拿耗子就能多苟延残喘一会儿了，真可惜呢。”  
-“为什么要做这种事。”  
-“很简单的道理。因为他们发觉我的真实身份了。”  
-“真实身份……”  
-“那边的小姑娘不是说过了吗？”  
-“军方吗？”  
-“同时也是研究者。DURPA——反正说出来你也不知道吧。”  
+莱耶丝一脸惊讶地盯着我，但最后只是长叹了一口气。  
+“算了，没必要现在就得出结论。处理完她的事之前，我可以让你慢慢考虑……”  
 
 
 <br/>
@@ -137,4 +125,4 @@
 > (to be continued)
 ---
 
-| [←prev](./0129) | [menu](../) | [next→](./0131) |
+| [←prev](./0134) | [menu](../) | [next→](./0136) |
